manifest.yaml
---
# Source: chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-roman-rudenko
  labels:
    app.kubernetes.io/name: chart
    helm.sh/chart: chart-0.1.0
    app.kubernetes.io/instance: release-name
    learning: roman-rudenko
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: chart
    app.kubernetes.io/instance: release-name

---
# Source: chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-roman-rudenko
  labels:
    app.kubernetes.io/name: chart
    helm.sh/chart: chart-0.1.0
    app.kubernetes.io/instance: release-name
    learning: roman-rudenko
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: chart
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chart
        app.kubernetes.io/instance: release-name
    spec:
      containers:
        - name: chart
          image: "docker.io/bitnami/nginx:1.16.1-debian-10-r0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
            

---
# Source: chart/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: release-name-roman-rudenko
  labels:
    app.kubernetes.io/name: chart
    helm.sh/chart: chart-0.1.0
    app.kubernetes.io/instance: release-name
    learning: roman-rudenko
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/managed-by: Tiller
spec:
  host: release-name-roman-rudenko-flux.telitcaas4.t-internal.com
  to:
    kind: Service
    name: release-name-roman-rudenko 
  port:
    targetPort: http
